// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`footer create 1`] = `
<div class="weui-footer">
  <!---->
  <p class="weui-footer__text"></p>
</div>
`;

exports[`footer text 1`] = `
<div class="weui-footer">
  <!---->
  <p class="weui-footer__text">test</p>
</div>
`;
